--- a/estilos.css
+++ b/estilos.css
@@ -288,7 +288,7 @@ h2.sec3 {
 }
 
 .planes__imagen--oro {
-    background-image: url(./imgaltreno/PLANb.png);
+    background-image: url(./imgaltreno/PLANB.png);
     height: 250px;
     display: flex;
     justify-content: center;
