--- a/estilos.css
+++ b/estilos.css
@@ -720,7 +720,20 @@ p.texto8 {
     border-radius: 10px;
 
 }
-
+@media only screen and (min-height: 200px) and (max-height:450px) {
+        /* PAGINA PRINCIPAL */
+        h1 {
+            font-size: 40px;
+        }
+    
+        .botones {
+            scale: 0.3;
+            height: 100px;
+            display: flex;
+            flex-wrap: nowrap;
+        }
+    
+}
 
 @media only screen and (max-width:479px) and (min-width: 320px) {
 
