--- a/estilos.css
+++ b/estilos.css
@@ -549,17 +549,15 @@ footer {
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    height: auto;
     background-size: cover;
     overflow: hidden;
 }
 
 .item4 {
     background-color: #000000b2;
-    height: 1200px;
+    min-height: 100vh;
     margin-left: 300px;
     margin-right: 300px;
-
 
 }
 
@@ -573,12 +571,13 @@ p.texto4 {
 }
 
 form.item5 {
-    padding-top: 150px;
+    padding-top: 220px;
     text-align: center;
-    scale: 3;
+    scale: 2.5;
     color: #ffffff;
     font-family: 'Orbitron', sans-serif;
     font-size: 10px;
+    padding-bottom: 230px;
 
 }
 
@@ -912,15 +911,14 @@ p.texto8 {
     }
 
     /* INSCRIPCION */
-    .cont5 {
-        height: auto;
-    }
+
 
     .item4 {
         background-color: #000000b2;
-        height: 500px;
+        min-height: 100vh;
         margin-left: 15px;
         margin-right: 15px;
+        padding-bottom: 30px;
     }
 
     p.texto4 {
@@ -933,9 +931,9 @@ p.texto8 {
         padding-top: 20px;
         scale: 1.1;
         font-size: 10px;
+        padding-bottom: 40px;
 
     }
-
 }
 
 @media only screen and (min-width:480px) and (max-width:799px) {
@@ -1114,15 +1112,13 @@ p.texto8 {
     }
 
     /* INSCRIPCION */
-    .cont5 {
-        height: auto;
-    }
 
     .item4 {
         background-color: #000000b2;
-        height: 600px;
+        min-height: 100vh;
         margin-left: 40px;
         margin-right: 40px;
+        padding-bottom: 80px;
     }
 
     p.texto4 {
@@ -1133,9 +1129,10 @@ p.texto8 {
     }
 
     form.item5 {
-        padding-top: 0px;
+        padding-top: 20px;
         scale: 1.5;
         font-size: 10px;
+        padding-bottom: 40px;
 
     }
 }
@@ -1303,15 +1300,13 @@ p.texto8 {
     }
 
     /* INSCRIPCION */
-    .cont5 {
-        height: auto;
-    }
 
     .item4 {
         background-color: #000000b2;
-        height: 700px;
+        min-height: 100vh;
         margin-left: 100px;
         margin-right: 100px;
+        padding-bottom: 110px;
     }
 
     p.texto4 {
@@ -1322,9 +1317,10 @@ p.texto8 {
     }
 
     form.item5 {
-        padding-top: 0px;
+        padding-top: 20px;
         scale: 1.7;
         font-size: 10px;
+        padding-bottom: 50px    ;
 
     }
 }
@@ -1502,28 +1498,29 @@ p.texto8 {
     }
 
     /* INSCRIPCION */
-    .cont5 {
-        height: auto;
-    }
+
+
 
     .item4 {
         background-color: #000000b2;
-        height: 800px;
-        margin-left: 130px;
-        margin-right: 130px;
+        min-height: 100vh;
+        margin-left: 100px;
+        margin-right: 100px;
+        padding-bottom: 110px;
     }
 
     p.texto4 {
-        padding-top: 40px;
+        padding-top: 30px;
         font-size: 35px;
-        padding-bottom: 150px;
+        padding-bottom: 120px;
 
     }
 
     form.item5 {
-        padding-top: 0px;
-        scale: 2;
+        padding-top: 50px;
+        scale: 1.9;
         font-size: 10px;
+        padding-bottom: 70px;
 
     }
 }
@@ -1598,30 +1595,30 @@ p.texto8 {
         width: 620px;
         height: 300px;
     }
-    /* INSCRIPCION */
-    .cont5 {
-        height: auto;
-    }
+
+
+ /* INSCRIPCION */
 
     .item4 {
         background-color: #000000b2;
-        height: 1000px;
-        margin-left: 200px;
-        margin-right: 200px;
+        min-height: 100vh;
+        margin-left: 100px;
+        margin-right: 100px;
+        padding-bottom: 110px;
     }
 
     p.texto4 {
-        padding-top: 40px;
+        padding-top: 30px;
         font-size: 45px;
-        padding-bottom: 250px;
+        padding-bottom: 150px;
 
     }
 
     form.item5 {
-        padding-top: 0px;
-        scale: 2.5;
+        padding-top: 10px;
+        scale: 2;
         font-size: 10px;
-
+        padding-bottom: 50px;
     }
 }
 
