--- a/estilos.css
+++ b/estilos.css
@@ -655,25 +655,72 @@ a.logo2 {
 
 
 /*------!ALTRENO SWIM!------*/
-.cont8 {
-    background-image: url(./imgaltreno/6.jpg);
-    background-repeat: no-repeat;
+.altrenoswim{
+    background-image: url(./Imgpileta/fondo.png);
     background-position: center;
     background-attachment: fixed;
-    height: 100vh;
-    background-size: cover;
-}
-
-.item8 {
-    background-color: #19b2d87c;
-}
-
-p.texto8 {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 100px;
-    text-align: center;
     min-height: 100vh;
-    padding-top: 400px;
+    background-size: cover;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat (8, 200px);
+    grid-gap:20px;
+}
+
+.altrenoswim .foto:hover{
+    filter: grayscale(0%);
+    transform: scale(1.01);
+}
+
+.foto{
+    width: 100%;
+    background-color: #333;
+    border: 5px solid #ffffff;
+    background-size: cover;
+    background-position: center;
+    filter: grayscale(100%);
+}
+
+.foto1{
+    background-image: url(./Imgpileta/vertical.jpg);
+    grid-column:1/2;
+    grid-row: 1/5;
+}
+.foto2{
+    background-image: url(./Imgpileta/aquagym.png);
+    grid-column: 2/4;
+    grid-row:1/3;
+}
+.foto3{
+    background-image: url(./Imgpileta/swimming-pool-765312_640.jpg);
+    grid-column: 2/3;
+    grid-row: 3/5;
+}
+.foto4{
+    background-image: url(./Imgpileta/natacion\ equipo.png);
+}
+.foto5{
+    background-image: url(./Imgpileta/swimming-78112_640.jpg);
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+.foto6{
+    background-image: url(./Imgpileta/swimmers-79592_640.jpg);
+    grid-column: 1/2;
+    grid-row:5/7;
+}
+.foto7{
+    background-image: url(./Imgpileta/asda.jpg);
+    grid-column: 3/4;
+    grid-row: 4/6;
+}
+.foto8{
+
+    background-image: url(./Imgpileta/swimming-924895_640.jpg);
+    grid-column: 2/4;
+    grid-row: 6/7;
+
 }
 
 /* -----!METODO!------- */
@@ -852,6 +899,53 @@ p.texto8 {
         padding-right: 30px;
         padding-top: 80px;
     }
+
+/*------!ALTRENO SWIM!------*/
+.altrenoswim{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat (9, 200px);
+}
+
+.altrenoswim .foto:hover{
+    transform: scale(1.02);
+}
+
+
+.foto1{
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+.foto2{
+    grid-column: 1/3;
+    grid-row: 5/6;
+}
+.foto3{
+    grid-column: 1/3;
+    grid-row: 3/5;
+}
+.foto4{
+    grid-column: 2/3;
+    grid-row: 1/3;
+}
+.foto5{
+    grid-column: 1/2;
+    grid-row: 6/7;
+}
+.foto6{
+    grid-column: 1/2;
+    grid-row: 7/9;
+}
+.foto7{
+    grid-column: 2/3;
+    grid-row: 6/8;
+}
+.foto8{
+    grid-column: 2/3;
+    grid-row: 8/9;
+
+}
+
 
     /* METODO */
     .galeria {
@@ -1053,7 +1147,46 @@ p.texto8 {
         padding-right: 50px;
         padding-top: 80px;
     }
+/*------!ALTRENO SWIM!------*/
+.altrenoswim{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat (11, 200px);
+}
 
+.foto1{
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+.foto2{
+    grid-column: 1/3;
+    grid-row: 6/8;
+}
+.foto3{
+    grid-column: 1/2;
+    grid-row: 3/6;
+}
+.foto4{
+    grid-column: 2/3;
+    grid-row: 1/3;
+}
+.foto5{
+    grid-column: 1/2;
+    grid-row: 8/10;
+}
+.foto6{
+    grid-column: 2/3;
+    grid-row: 3/6;
+}
+.foto7{
+    grid-column: 2/3;
+    grid-row: 8/10;
+}
+.foto8{
+    grid-column: 1/3;
+    grid-row: 10/11;
+
+}
     /* METODO */
     .galeria {
         height: 350px;
