--- a/estilos.css
+++ b/estilos.css
@@ -537,6 +537,35 @@ footer .redes i:hover {
 }
 
 /*------!ALTRENO SWIM!------*/
+.cont11 .info, .cont11 .info--nueva {
+  width: 100%;
+  height: 100px;
+  background-color: rgba(6, 201, 201, 0.603);
+  border: 3px solid rgb(255, 255, 255);
+  border-radius: 10px;
+  filter: grayscale(100%);
+}
+.cont11 .info .texto11, .cont11 .info--nueva .texto11 {
+  color: rgb(0, 0, 0);
+  font-size: 50px;
+  text-shadow: black 0 10px 10px;
+  text-align: center;
+}
+.cont11 .info--nueva .texto12 {
+  color: rgba(255, 255, 255, 0.795);
+  font-weight: 100px;
+  font-family: "Cinzel", serif;
+  text-shadow: rgba(253, 253, 253, 0.637) 2px 0px 5px;
+  font-size: 50px;
+  text-align: center;
+}
+.cont11 .info--nueva .texto12 span {
+  color: rgb(0, 0, 0);
+}
+.cont11 .info:hover, .cont11 .info--nueva:hover {
+  filter: grayscale(0%);
+}
+
 .altrenoswim {
   background-image: url(./Imgpileta/fondo.png);
   background-position: center;
@@ -770,6 +799,19 @@ footer .redes i:hover {
     height: 280px;
   }
   /*------!ALTRENO SWIM!------*/
+  .cont11 .info, .cont11 .info--nueva {
+    width: 100%;
+    height: 70px;
+    background-color: rgba(6, 201, 201, 0.603);
+    filter: grayscale(100%);
+  }
+  .cont11 .info .texto11, .cont11 .info--nueva .texto11 {
+    padding-top: 10px;
+    font-size: 20px;
+  }
+  .cont11 .info--nueva .texto12 {
+    font-size: 20px;
+  }
   .altrenoswim {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -975,6 +1017,20 @@ footer .redes i:hover {
     height: 280px;
   }
   /*------!ALTRENO SWIM!------*/
+  .cont11 .info, .cont11 .info--nueva {
+    width: 100%;
+    height: 70px;
+    background-color: rgba(6, 201, 201, 0.603);
+    filter: grayscale(100%);
+  }
+  .cont11 .info .texto11, .cont11 .info--nueva .texto11 {
+    padding-top: 10px;
+    font-size: 30px;
+  }
+  .cont11 .info--nueva .texto12 {
+    font-size: 20px;
+    padding-top: 10px;
+  }
   .altrenoswim {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -1168,6 +1224,21 @@ footer .redes i:hover {
     height: auto;
     padding-left: 20px;
     padding-right: 20px;
+  }
+  /*ALTRENO SWIM*/
+  .cont11 .info, .cont11 .info--nueva {
+    width: 100%;
+    height: 70px;
+    background-color: rgba(6, 201, 201, 0.603);
+    filter: grayscale(100%);
+  }
+  .cont11 .info .texto11, .cont11 .info--nueva .texto11 {
+    padding-top: 10px;
+    font-size: 35px;
+  }
+  .cont11 .info--nueva .texto12 {
+    font-size: 30px;
+    padding-top: 10px;
   }
   /* ACTIVIDADES */
   .cont6 {
