--- a/estilos.scss
+++ b/estilos.scss
@@ -16,6 +16,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+SC:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 
+@mixin sizes ($width, $height, $bgcolor){
+    width: $width;
+    height: $height;
+    background-color: $bgcolor;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -555,6 +561,37 @@ footer {
     }
 }
 /*------!ALTRENO SWIM!------*/
+.cont11{
+    .info{
+        @include sizes(100%, 100px, rgba(6, 201, 201, 0.603));
+        border: 3px solid rgb(255, 255, 255);
+        border-radius: 10px;
+        filter: grayscale(100%);
+        .texto11{
+            color: rgb(0, 0, 0);
+            font-size: 50px;
+            text-shadow: black 0 10px 10px;
+            text-align: center
+        }
+    }
+    .info--nueva{
+        @extend .info;
+        .texto12{
+            color: rgba(255, 255, 255, 0.795);
+            font-weight: 100px;
+            font-family: 'Cinzel', serif;
+            text-shadow: rgba(253, 253, 253, 0.637) 2px 0px 5px;
+            font-size: 50px;
+            text-align: center;
+            span{
+                color: rgb(0, 0, 0);
+            }
+        }
+    }
+    .info:hover{
+        filter: grayscale(0%);
+    }
+}
 .altrenoswim {
     background-image: url(./Imgpileta/fondo.png);
     background-position: center;
@@ -747,6 +784,7 @@ footer {
         }
     }
     /* NATACION */
+
     .cont7 {
         width: 100%;
         background-position: center;
@@ -797,6 +835,21 @@ footer {
     }
 
     /*------!ALTRENO SWIM!------*/
+    .cont11{
+        .info{
+            @include sizes(100%, 70px, rgba(6, 201, 201, 0.603));
+            filter: grayscale(100%);
+            .texto11{
+                padding-top: 10px;
+                font-size: 20px;
+            }
+        }
+        .info--nueva{
+            .texto12{
+                font-size: 20px;
+            }
+        }
+    }
     .altrenoswim {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -967,6 +1020,7 @@ footer {
         }
     }
     /* NATACION */
+
     .cont7 {
         width: 100%;
         background-position: center;
@@ -1017,6 +1071,23 @@ footer {
     }
 
     /*------!ALTRENO SWIM!------*/
+    .cont11{
+        .info{
+            @include sizes(100%, 70px, rgba(6, 201, 201, 0.603));
+            filter: grayscale(100%);
+            .texto11{
+                padding-top: 10px;
+                font-size: 30px;
+            }
+        }
+        .info--nueva{
+            .texto12{
+                font-size: 20px;
+                padding-top: 10px;
+            }
+        }
+    }
+
     .altrenoswim {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -1219,6 +1290,23 @@ footer {
                 height: auto;
                 padding-left: 20px;
                 padding-right: 20px;
+            }
+        }
+    }
+    /*ALTRENO SWIM*/
+    .cont11{
+        .info{
+            @include sizes(100%, 70px, rgba(6, 201, 201, 0.603));
+            filter: grayscale(100%);
+            .texto11{
+                padding-top: 10px;
+                font-size: 35px;
+            }
+        }
+        .info--nueva{
+            .texto12{
+                font-size: 30px;
+                padding-top: 10px;
             }
         }
     }
