--- a/estilos.css
+++ b/estilos.css
@@ -537,12 +537,17 @@ footer .redes i:hover {
 }
 
 /*------!ALTRENO SWIM!------*/
+.cont11 {
+  background-color: #000000;
+  padding: 20px;
+  border: 1.5px solid #454343;
+}
 .cont11 .info, .cont11 .info--nueva {
   width: 100%;
   height: 100px;
   background-color: rgba(6, 201, 201, 0.603);
-  border: 3px solid rgb(255, 255, 255);
   border-radius: 10px;
+  box-shadow: inset 0px 0px 15px aqua;
   filter: grayscale(100%);
 }
 .cont11 .info .texto11, .cont11 .info--nueva .texto11 {
@@ -550,6 +555,9 @@ footer .redes i:hover {
   font-size: 50px;
   text-shadow: black 0 10px 10px;
   text-align: center;
+}
+.cont11 .info--nueva {
+  margin-top: 10px;
 }
 .cont11 .info--nueva .texto12 {
   color: rgba(255, 255, 255, 0.795);
@@ -677,7 +685,7 @@ footer .redes i:hover {
     flex-wrap: nowrap;
   }
 }
-@media only screen and (max-width: 479px) and (min-width: 320px) {
+@media only screen and (max-width: 480px) and (min-width: 320px) {
   /* PAGINA PRINCIPAL */
   h1 {
     font-size: 40px;
@@ -1029,7 +1037,7 @@ footer .redes i:hover {
   }
   .cont11 .info--nueva .texto12 {
     font-size: 20px;
-    padding-top: 10px;
+    padding-top: 20px;
   }
   .altrenoswim {
     display: grid;
@@ -1111,7 +1119,7 @@ footer .redes i:hover {
     padding-bottom: 40px;
   }
 }
-@media only screen and (min-width: 800px) and (max-width: 1023px) {
+@media only screen and (min-width: 799px) and (max-width: 1024px) {
   /* PAGINA PRINCIPAL */
   h1 {
     font-size: 90px;
