--- a/estilos.scss
+++ b/estilos.scss
@@ -562,10 +562,13 @@ footer {
 }
 /*------!ALTRENO SWIM!------*/
 .cont11{
+    background-color: #000000;
+    padding: 20px;
+    border: 1.5px solid #454343;
     .info{
         @include sizes(100%, 100px, rgba(6, 201, 201, 0.603));
-        border: 3px solid rgb(255, 255, 255);
         border-radius: 10px;
+        box-shadow: inset 0px 0px 15px aqua;
         filter: grayscale(100%);
         .texto11{
             color: rgb(0, 0, 0);
@@ -576,6 +579,7 @@ footer {
     }
     .info--nueva{
         @extend .info;
+        margin-top: 10px;
         .texto12{
             color: rgba(255, 255, 255, 0.795);
             font-weight: 100px;
@@ -705,7 +709,7 @@ footer {
     }
 }
 
-@media only screen and (max-width:479px) and (min-width: 320px) {
+@media only screen and (max-width:480px) and (min-width: 320px) {
     /* PAGINA PRINCIPAL */
     h1 {
         font-size: 40px;
@@ -1083,7 +1087,7 @@ footer {
         .info--nueva{
             .texto12{
                 font-size: 20px;
-                padding-top: 10px;
+                padding-top: 20px;
             }
         }
     }
@@ -1171,7 +1175,7 @@ footer {
         }
     }
 }
-@media only screen and (min-width:800px) and (max-width:1023px) {
+@media only screen and (min-width:799px) and (max-width:1024px) {
     /* PAGINA PRINCIPAL */
     h1 {
         font-size: 90px;
