--- a/estilos.css
+++ b/estilos.css
@@ -113,7 +113,7 @@ header .navbar-collapse .desplegable .dropdown-item:hover {
 
 /*--------------!NOSOTROS!----------*/
 .cont1 {
-  background-image: url(./imgaltreno/imgaltreno.bmp);
+  background-image: url(./imgaltreno/imgaltreno.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
