--- a/estilos.scss
+++ b/estilos.scss
@@ -130,7 +130,7 @@ header {
 /*--------------!NOSOTROS!----------*/
 
 .cont1 {
-    background-image: url(./imgaltreno/imgaltreno.bmp);
+    background-image: url(./imgaltreno/imgaltreno.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
