--- a/estilos.scss
+++ b/estilos.scss
@@ -461,6 +461,7 @@ footer {
     }
 }
 
+
 /*-------!INSCRIPCION!--------*/
 
 .cont5 {
@@ -471,27 +472,145 @@ footer {
     background-size: cover;
     overflow: hidden;
     .item4 {
-        background-color: #000000b2;
-        min-height: 100vh;
-        margin-left: 300px;
-        margin-right: 300px;
+        display: flex;
+        justify-content: center;
+        background-color: #07070780;
+        height: 100%;
+        margin-left: 20%;
+        margin-right: 20%;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        font-size: 20px;
+        text-align: center;
+        box-shadow: -40px 9px 88px -29px rgb(253, 253, 253);
+        border: 1px solid rgba(255, 255, 255, 0.103);
         p.texto4 {
             text-align: center;
             color: #ffffff;
-            padding-top: 45px;
+            padding-top: 20px;
             font-family: 'Orbitron', sans-serif;
-            font-size: 50px;
+            font-size: 45px;
+        }
+        ::placeholder{
+            color: #ffffff;
+        }
+        .input-l{
+            color: #ffffff;
+            background-color: #07070700;
+            border: none;
+            border-bottom: 3px solid #000000;
+            width: 550px;
+            text-align: center;
+            margin-top: 20px;
+            font-family: Cinzel;
+            font-size: 25px;
+        }
+        .input-l:focus{
+            outline: none;
+            font-weight: bold;
+            border-bottom: 3px solid #00eeff8a;
+        }
+        .input-txt{
+            color: #ffffff;
+            background-color: #f8f1f100;
+            border: none;
+            border-bottom: 3px solid #000000;
+            width: 550px;
+            text-align: start;
+            margin-top: 50px;
+            resize: none;
+            font-family: Cinzel;
+            font-size: 25px;
+        }
+        .input-txt:focus{
+            outline: none;
+            font-weight: bold;
+            color: #ffffff;
+            border-bottom: 3px solid #00eeff8a;
+        }
+        #btn-send{
+            font-size: 20px;
+            background-color: rgb(0, 247, 255);
+            color: rgb(0, 0, 0);
+            margin-top: 30px;
+            margin-bottom: 25px;
+            width: 150px;
+            border: none;
+            text-decoration: none;
+            transition: all (1.5s);
+            border-radius: 20px;
+            padding: 5px;
+            display: inline-block;
+            text-align: center;
+            text-transform:uppercase;
+            transition: all 0s;
+            font-family: Cinzel;
+        }
+        #btn-send:active{
+            background-color: rgb(0, 0, 0);
+            color: rgb(0, 225, 255);
+            border: 2px solid black;
         }
     }
-    form.item5 {
-        padding-top: 220px;
-        text-align: center;
-        scale: 2.5;
-        color: #ffffff;
-        font-family: 'Orbitron', sans-serif;
-        font-size: 10px;
-        padding-bottom: 230px;
+}
+
+// GRACIAS
+.sec13{
+    background: rgb(14,187,185);
+    background: linear-gradient(144deg, rgba(14,187,185,1) 6%, rgba(17,189,187,1) 33%, rgba(46,213,211,0.9836309523809523) 57%, rgba(20,203,198,0.9500175070028011) 83%);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-wrap: nowrap;
+    .thx{
+        .title-thx{
+            font-family: Cinzel;
+            font-size: 45px;
+            font-weight: bold;
+            text-shadow: 0px 1px 2px rgb(15, 8, 8);
+            margin-left: 20px;
+            margin-right: 20px;
+            color: #000;
+        }
+        #subtitle-thx{
+            font-family: Cinzel;
+            font-size: 25px;
+            margin-bottom: 40px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        #blurButton{
+            color: black;
+            text-decoration: none;
+            font-size: 20px;
+            font-weight: bold;
+            font-family: cinzel;
+            background-color: white;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 25px;
+            padding-left: 25px;
+            border-radius: 30px;
+            border: 2px solid black;
+            cursor: pointer;
+            transition: all (0.5s);
+            .fa-house{
+                color: rgb(14,187,185);
+            }
+        }
+        #blurButton:hover{
+            background-color: black;
+            color: white;
+            .fa-house{
+                color: rgb(14,187,185);
+            }
+        }
     }
+}
+.blur {
+    filter: blur(5px);
 }
 
 /*---------!ACTIVIDADES!-----------*/
@@ -546,7 +665,7 @@ footer {
             font-weight: 100px;
             font-family: 'Cinzel', serif;
             overflow: hidden;
-            text-shadow: rgba(253, 253, 253, 0.637) 2px 0px 5px;
+            text-shadow: rgba(5, 5, 5, 0.849) 2px 0px 5px;
         }
         a.logo2 {
             color: rgb(231, 231, 231);
@@ -709,7 +828,7 @@ footer {
     }
 }
 
-@media only screen and (max-width:480px) and (min-width: 320px) {
+@media only screen and (max-width:479px) and (min-width: 320px) {
     /* PAGINA PRINCIPAL */
     h1 {
         font-size: 40px;
@@ -917,28 +1036,48 @@ footer {
 
     /* INSCRIPCION */
     .cont5{
-        .item4 {
-            background-color: #000000b2;
-            min-height: 100vh;
-            margin-left: 15px;
-            margin-right: 15px;
-            padding-bottom: 30px;
-            p.texto4 {
-                padding-top: 40px;
+        .item4{
+            margin-left: 5%;
+            margin-right: 5%;
+            box-shadow: -40px 9px 88px -29px rgba(253, 253, 253, 0.308);
+            p.texto4{
                 font-size: 25px;
             }
-        form.item5 {
-            padding-top: 20px;
-            scale: 1.1;
-            font-size: 10px;
-            padding-bottom: 40px;
+            .input-l{
+                width: 200px;
+                font-size: 15px;
+            }
+            .input-txt{
+                width: 200px;
+                font-size: 12px;
+            }
+            #btn-send{
+                width: 150px;
+                font-size: 15px;
             }
         }
     }
+    //Gracias
+    .sec13{
+        .thx{
+            .title-thx{
+                font-size: 32px;
+            }
+            #subtitle-thx{
+                font-size: 20px;
+            }
+            #blurButton{
+                font-size: 20px;
+                padding: 10px;
+            }
+        }
+    }
+    .blur {
+        filter: blur(5px);
+    }
 }
 
-
-@media only screen and (min-width:480px) and (max-width:799px) {
+@media only screen and (min-width:480px) and (max-width:798px) {
     /* PAGINA PRINCIPAL */
     h1 {
         font-size: 60px;
@@ -1155,27 +1294,29 @@ footer {
 
     /* INSCRIPCION */
     .cont5{
-        .item4 {
-            background-color: #000000b2;
-            min-height: 100vh;
-            margin-left: 40px;
-            margin-right: 40px;
-            padding-bottom: 80px;
-            p.texto4 {
-                padding-top: 10px;
-                font-size: 25px;
-                padding-bottom: 80px;
+        .item4{
+            margin-left: 7%;
+            margin-right: 7%;
+            box-shadow: -40px 9px 88px -29px rgba(253, 253, 253, 0.212);
+            p.texto4{
+                font-size: 30px;
             }
-        form.item5 {
-            padding-top: 20px;
-            scale: 1.5;
-            font-size: 10px;
-            padding-bottom: 40px;
+            .input-l{
+                width: 350px;
+                font-size: 20px;
+            }
+            .input-txt{
+                width: 350px;
+                font-size: 17px;
+            }
+            #btn-send{
+                width: 200px;
+                font-size: 17px;
             }
         }
     }
 }
-@media only screen and (min-width:799px) and (max-width:1024px) {
+@media only screen and (min-width:799px) and (max-width:1022px) {
     /* PAGINA PRINCIPAL */
     h1 {
         font-size: 90px;
@@ -1338,26 +1479,29 @@ footer {
 
     /* INSCRIPCION */
     .cont5{
-        .item4 {
-            background-color: #000000b2;
-            min-height: 100vh;
-            margin-left: 100px;
-            margin-right: 100px;
-            padding-bottom: 110px;
-            p.texto4 {
-                padding-top: 30px;
-                font-size: 25px;
-                padding-bottom: 120px;
+        .item4{
+            margin-left: 10%;
+            margin-right: 10%;
+            box-shadow: -40px 9px 88px -29px rgba(253, 253, 253, 0.212);
+            p.texto4{
+                font-size: 30px;
             }
-        form.item5 {
-            padding-top: 20px;
-            scale: 1.7;
-            font-size: 10px;
-            padding-bottom: 50px;
+            .input-l{
+                width: 450px;
+                font-size: 20px;
+            }
+            .input-txt{
+                width: 450px;
+                font-size: 17px;
+            }
+            #btn-send{
+                width: 150px;
+                font-size: 17px;
             }
         }
     }
 }
+
 
 @media only screen and (min-width:1023px) and (max-width:1458px) {
     /* PAGINA PRINCIPAL */
@@ -1507,22 +1651,24 @@ footer {
 
     /* INSCRIPCION */
     .cont5{
-        .item4 {
-            background-color: #000000b2;
-            min-height: 100vh;
-            margin-left: 100px;
-            margin-right: 100px;
-            padding-bottom: 110px;
-            p.texto4 {
-                padding-top: 30px;
-                font-size: 35px;
-                padding-bottom: 120px;
+        .item4{
+            margin-left: 15%;
+            margin-right: 15%;
+            box-shadow: -40px 9px 88px -29px rgba(253, 253, 253, 0.432);
+            p.texto4{
+                font-size: 40px;
             }
-        form.item5 {
-            padding-top: 50px;
-            scale: 1.9;
-            font-size: 10px;
-            padding-bottom: 70px;
+            .input-l{
+                width: 550px;
+                font-size: 25px;
+            }
+            .input-txt{
+                width: 550px;
+                font-size: 20px;
+            }
+            #btn-send{
+                width: 150px;
+                font-size: 17px;
             }
         }
     }
@@ -1594,22 +1740,24 @@ footer {
     }
     /* INSCRIPCION */
     .cont5{
-        .item4 {
-            background-color: #000000b2;
-            min-height: 100vh;
-            margin-left: 100px;
-            margin-right: 100px;
-            padding-bottom: 110px;
-            p.texto4 {
-                padding-top: 30px;
+        .item4{
+            margin-left: 15%;
+            margin-right: 15%;
+            box-shadow: -40px 9px 88px -29px rgba(253, 253, 253, 0.212);
+            p.texto4{
                 font-size: 45px;
-                padding-bottom: 150px;
             }
-        form.item5 {
-            padding-top: 10px;
-            scale: 2;
-            font-size: 10px;
-            padding-bottom: 50px;
+            .input-l{
+                width: 600px;
+                font-size: 27px;
+            }
+            .input-txt{
+                width: 600px;
+                font-size: 22px;
+            }
+            #btn-send{
+                width: 150px;
+                font-size: 20px;
             }
         }
     }
